[gd_scene load_steps=19 format=3 uid="uid://brarw73p2ss0"]

[ext_resource type="Script" uid="uid://dlombqqma6ffi" path="res://music_manager.gd" id="1_tylfe"]
[ext_resource type="AudioStream" uid="uid://djsqi5hk8cqvp" path="res://Music/OST1/calm1.ogg" id="2_rn4ok"]
[ext_resource type="AudioStream" uid="uid://ct1tv7gd0d6xr" path="res://Music/silence.ogg" id="3_u7qmi"]
[ext_resource type="AudioStream" uid="uid://ceda4c52rrkek" path="res://Music/OST1/bass.ogg" id="4_l0n74"]
[ext_resource type="AudioStream" uid="uid://bay2ajwwd0nvy" path="res://Music/OST1/drums1.ogg" id="5_6bu3j"]
[ext_resource type="AudioStream" uid="uid://b4ilms0b4cl2w" path="res://Music/OST1/melody1.ogg" id="6_wdhd3"]
[ext_resource type="AudioStream" uid="uid://bov8ko2uf2yrd" path="res://Music/OST1/backing.ogg" id="7_kyyes"]
[ext_resource type="AudioStream" uid="uid://dqkrwvr8odrm1" path="res://Music/OST1/backing2.ogg" id="8_22gu4"]
[ext_resource type="AudioStream" uid="uid://c6c4kosq5rcj5" path="res://Music/OST1/backing3.ogg" id="9_7n7fs"]
[ext_resource type="AudioStream" uid="uid://cxnd4dnpab2pp" path="res://Music/OST1/melody2.ogg" id="10_eyimf"]
[ext_resource type="AudioStream" uid="uid://c4afk4egqj245" path="res://Music/OST1/ladder.ogg" id="11_32pxr"]
[ext_resource type="AudioStream" uid="uid://0amo7pnp0b14" path="res://Music/OST1/ladder2.ogg" id="12_5tnd0"]

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_u5yq6"]
stream_count = 1
stream_0/stream = ExtResource("2_rn4ok")
stream_0/volume = 0.0

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_vfhda"]
clip_count = 2
clip_0/name = &"Silence"
clip_0/stream = ExtResource("3_u7qmi")
clip_0/auto_advance = 0
clip_1/name = &"Bass"
clip_1/stream = ExtResource("4_l0n74")
clip_1/auto_advance = 0
_transitions = {
Vector2i(0, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(1, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
}
}

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_7i7ec"]
clip_count = 2
clip_0/name = &"Silence"
clip_0/stream = ExtResource("3_u7qmi")
clip_0/auto_advance = 0
clip_1/name = &"Drums"
clip_1/stream = ExtResource("5_6bu3j")
clip_1/auto_advance = 0
_transitions = {
Vector2i(0, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(1, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
}
}

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_u5twb"]
clip_count = 5
clip_0/name = &"Silence"
clip_0/stream = ExtResource("3_u7qmi")
clip_0/auto_advance = 0
clip_1/name = &"Melody"
clip_1/stream = ExtResource("6_wdhd3")
clip_1/auto_advance = 1
clip_1/next_clip = 2
clip_2/name = &"Backing"
clip_2/stream = ExtResource("7_kyyes")
clip_2/auto_advance = 1
clip_2/next_clip = 1
clip_3/name = &"Backing 2"
clip_3/stream = ExtResource("8_22gu4")
clip_3/auto_advance = 1
clip_3/next_clip = 1
clip_4/name = &"Backing 3"
clip_4/stream = ExtResource("9_7n7fs")
clip_4/auto_advance = 1
clip_4/next_clip = 1
_transitions = {
Vector2i(0, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(0, 2): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(0, 3): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(0, 4): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(1, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(1, 2): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
},
Vector2i(1, 3): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
},
Vector2i(1, 4): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
},
Vector2i(2, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(2, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
},
Vector2i(3, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(3, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
},
Vector2i(4, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(4, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
}
}

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_q1vne"]
clip_count = 4
clip_0/name = &"Silence"
clip_0/stream = ExtResource("3_u7qmi")
clip_0/auto_advance = 0
clip_1/name = &"Melody2"
clip_1/stream = ExtResource("10_eyimf")
clip_1/auto_advance = 1
clip_1/next_clip = 2
clip_2/name = &"Ladder"
clip_2/stream = ExtResource("11_32pxr")
clip_2/auto_advance = 1
clip_2/next_clip = 1
clip_3/name = &"Ladder2"
clip_3/stream = ExtResource("12_5tnd0")
clip_3/auto_advance = 1
clip_3/next_clip = 1
_transitions = {
Vector2i(0, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(0, 2): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(0, 3): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(1, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(1, 2): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
},
Vector2i(1, 3): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
},
Vector2i(2, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(2, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
},
Vector2i(3, 0): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 2,
"to_time": 0
},
Vector2i(3, 1): {
"fade_beats": 0.0,
"fade_mode": 0,
"from_time": 3,
"to_time": 1
}
}

[sub_resource type="LabelSettings" id="LabelSettings_rn4ok"]
font_size = 30
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="music_manager" type="Node"]
script = ExtResource("1_tylfe")

[node name="music0" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_u5yq6")
autoplay = true
bus = &"music"

[node name="music1" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_vfhda")
autoplay = true
bus = &"music"

[node name="music2" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_7i7ec")
autoplay = true
bus = &"music"

[node name="music3" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_u5twb")
autoplay = true
bus = &"music"

[node name="music4" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_q1vne")
autoplay = true
bus = &"music"

[node name="musicDebug" type="Label" parent="."]
visible = false
offset_left = 25.0
offset_top = 20.0
offset_right = 1218.0
offset_bottom = 217.0
text = "Now playing:"
label_settings = SubResource("LabelSettings_rn4ok")
